Fix hero area spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16428,7 +16428,7 @@ Responsive Classes
 @media (max-width: 1023.98px) {
   .hero-area.is-product {
     height: 100%;
-    margin-top: 60px;
+    margin-top: 70px;
     padding-bottom: 60px; }
     .hero-area.is-product .buttons {
       justify-content: center; }
