--- a/assets/sass/components/_product-hero-area.scss
+++ b/assets/sass/components/_product-hero-area.scss
@@ -457,7 +457,7 @@ Responsive Classes
   .hero-area {
     &.is-product {
       height: 100%;
-      margin-top: 60px;
+      margin-top: 70px;
       padding-bottom: 60px;
 
       .buttons {
